--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "ai-chat-bot-speech",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/dialogflow": "^6.10.0",
+    "@google/generative-ai": "^0.21.0",
     "apiai": "^4.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "socket.io": "^4.8.0"
   }
